[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
bevy_rapier2d = "0.28.0"


[[bin]]
name = "dialogue"
path = "src/dialogueScene.rs"

[[bin]]
name = "platformer"
path = "src/main.rs"
