[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
bevy = "0.15.0"
bevy_rapier2d = "0.28.0"
image = { version = "0.25.5", features = ["png"], default-features = false }
serde = "1.0.216"
serde_json = "1.0.133"
